--- a/www/scss/_testimonial.scss
+++ b/www/scss/_testimonial.scss
@@ -52,6 +52,7 @@
       background-size: 100%, 100%;
       border-radius: 50%;
       background-image: none;
+      margin-top: -100px;
     }
 
     .carousel-control-next-icon:after
